<resources>
    <string name="app_name">TODOer</string>
    <string name="menu">MENU</string>
    <string name="time_def">12:00</string>
    <string name="date_def">10.10.2020</string>
    <string name="high_priority">High priority</string>
    <string name="add_def_name">TODO:</string>
    <string name="submit_button">Submit</string>
    <string name="group_str">Group:</string>
    <string name="today_button">TODAY</string>
    <string name="one_hour_more">+1 HOUR</string>
</resources>
