<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <!-- tools:context=".AddTask" -->
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/timeTF"
            android:enabled="false"
            android:hint="@string/time_def"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/todoTF"
            app:layout_constraintStart_toEndOf="@+id/plusHour"
            android:layout_marginStart="8dp"
            android:textAlignment="center"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:enabled="false"
            android:ems="10"
            android:id="@+id/dateTF"
            android:hint="@string/date_def"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/timeTF"
            app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp"
            android:textAlignment="center"/>
    <CheckBox
            android:text="@string/high_priority"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:id="@+id/priorityB"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            android:textColor="@color/colorPrimaryDark"/>
    <EditText
            android:layout_width="378dp"
            android:layout_height="48dp"
            android:ems="10"
            android:id="@+id/todoTF"
            android:hint="@string/add_def_name"
            android:maxLength="40"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.07999998"/>
    <Button
            android:text="@string/submit_button"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitB"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/priorityB"
            app:layout_constraintEnd_toEndOf="@+id/priorityB"
            app:layout_constraintStart_toStartOf="@+id/priorityB"
            android:textColor="@color/colorPrimaryDark"/>
            <!--
            android:onClick="createTODO"/>
            -->

    <TextView
            android:text="@string/group_str"
            android:layout_width="107dp"
            android:layout_height="19dp"
            android:id="@+id/textView5"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/dateTF"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/pickDateButton"
            android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="376dp"
            android:layout_height="62dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp">
        <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ic_chill"
                android:id="@+id/chillGroup"
                tools:layout_editor_absoluteY="547dp"
                tools:layout_editor_absoluteX="312dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp" />
                <!--
                android:onClick="addGroup"/>
                -->
        <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ic_school"
                android:id="@+id/schoolGroup"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="562dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
                <!--
                android:onClick="addGroup"/>
                -->
        <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ic_work"
                android:id="@+id/workGroup"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="547dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
                <!--
                android:onClick="addGroup"/>
                -->
        <ImageButton
                android:layout_width="70dp"
                android:layout_height="68dp"
                app:srcCompat="@drawable/ic_home"
                android:id="@+id/homeGroup"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="547dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp" />
                <!--
                android:onClick="addGroup"/>
                -->
    </LinearLayout>
    <Button
            android:text="@string/today_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/plusHour"
            app:layout_constraintStart_toStartOf="@+id/plusHour"
            android:textColor="@color/colorPrimaryDark"/>
            <!--
            android:onClick="todayClick"
            -->
    <ImageButton
            android:layout_width="55dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_datepicker"
            android:id="@+id/pickDateButton"
            app:layout_constraintStart_toEndOf="@+id/dateTF"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/pickTimeButton"
            app:layout_constraintEnd_toEndOf="@+id/pickTimeButton"
            android:layout_marginStart="8dp"/>
    <ImageButton
            android:layout_width="55dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_timepicker"
            android:id="@+id/pickTimeButton"
            app:layout_constraintStart_toEndOf="@+id/timeTF"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/todoTF"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/one_hour_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plusHour"
            app:layout_constraintStart_toStartOf="@+id/todoTF"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/todoTF"
            android:textColor="@color/colorPrimaryDark"/>
            <!--
            android:onClick="plusHourClick"
            -->
</android.support.constraint.ConstraintLayout>